# agent-engineering

./: .gitignore  SKYPILOT.md  pyproject.toml
email-agent/: .gitignore  all_experiments.py  benchmark.py  benchmark_models.py  class-outline.md  email_agent_colab.ipynb  email_search_tools.py  env.example  generate_synthetic_question_data.py  load_scenarios.py  project_types.py  pyproject.toml  rollout.py  run_agent.py  run_training.py  scratch.py  test_litellm.py  train.py
lec2-prod-agents/: prod_agents.ipynb
lec2-prod-agents/tests/: test_fetch_wiki_server.py
lec3-evals-optimization/: evals_optimization.ipynb
lec4-rl/: grpo_intro.ipynb
lectures-1-through-4/: pyproject.toml
lectures-1-through-4/lec2-prod-agents/: prod_agents.ipynb
lectures-1-through-4/lec2-prod-agents/servers/: fetch_wiki.py
lightning-lessons/: search.ipynb
