[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.66",
    "litellm[caching]>=1.73.0",
    "numpydoc>=1.9.0",
    "panza>=0.1.0",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "rich>=13.9.4",
    "weave>=0.51.54",
]
